changes on controllers and categories and kinds registering

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: bookmark, local: false) do |form| %>
+<%= form_with(model: bookmark, remote: true) do |form| %>
   <% if bookmark.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(bookmark.errors.count, "error") %> prohibited this bookmark from being saved:</h2>
@@ -22,19 +22,13 @@
   </div>
 
   <div class="field">
-    <h5><%= form.label "Select categories" %></h5> 
-    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-      <%= b.label %>
-      <%= b.check_box %>
-    <% end %>
+    <h5><%= form.label :category_id %></h5> 
+    <%= form.select :category_id, Category.all.collect {|c| [c.name, c.id]}, {} ,id: :bookmark_category_id, include_blank:false %>
   </div>
   
   <div class="field">
-    <h5><%= form.label "Select kinds" %></h5>  
-    <%= form.collection_check_boxes :kind_ids, Kind.all, :id, :name do |b| %>
-      <%= b.label %>
-      <%= b.check_box %>
-    <% end %>
+    <h5><%= form.label :kind_id %></h5>      
+    <%= form.select :kind_id, Kind.all.collect {|t| [t.name, t.id]}, {} ,id: :bookmark_kind_id, include_blank:false %>
   </div>
 
   <div class="actions btn btn-danger">
