--- a/app/views/bookmarks/_bookmark-detail.html.erb
+++ b/app/views/bookmarks/_bookmark-detail.html.erb
@@ -1,8 +1,11 @@
-<td><%= bookmark.title %></td>
+        <td><%= bookmark.title %></td>
         <td><%= bookmark.url %></td>
-        <td><%= bookmark.category_id %></td>
-        <td><%= bookmark.kind_id %></td>
+        <td>
+            <% bookmark.category.name %>
+        </td>
+        <td>
+            <% bookmark.kind.name %>
+        </td>
         <td><%= link_to 'Show', bookmark %></td>
         <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
-        <td><%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %>
-</td>
+        <td><%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %></td>
