--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -27,8 +27,8 @@
 <%= link_to 'New Bookmark', new_bookmark_path %>
 
 <div id="bookmark-content"></div>
-<h2>Categorías</h2>
-<%= pie_chart @bookmarks_cats %>
-<h2>Tipos de marcadores</h2>
+<h3>Categorías</h3>
+<%= line_chart @bookmarks_cats %>
+<h3>Tipos de marcadores</h3>
 
 <%= pie_chart @carlitos %>
