--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @bookmark.category_id %>
+  <%= @bookmark.category.name%>
 </p>
 
 <p>
   <strong>Kind:</strong>
-  <%= @bookmark.kind_id %>
+  <%= @bookmark.kind.name %>
 </p>
 
 <%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
