--- a/app/views/bookmarks/_bookmark-detail.html.erb
+++ b/app/views/bookmarks/_bookmark-detail.html.erb
@@ -1,10 +1,10 @@
         <td><%= bookmark.title %></td>
         <td><%= bookmark.url %></td>
         <td>
-            <% bookmark.category.name %>
+            <%= bookmark.category.name %>
         </td>
         <td>
-            <% bookmark.kind.name %>
+            <%= bookmark.kind.name %>
         </td>
         <td><%= link_to 'Show', bookmark %></td>
         <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
