--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Domain</th>
-      <th>Category</th>
+      <th>  Main Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
