--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,25 @@
   </head>
 
   <body>
-    
+
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+       <a class="navbar-brand" href="#"></a>
+       <%= link_to 'Inicio', bookmarks_path , class:"navbar-brand"%>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+         <div class="navbar-nav ml-auto">
+          <a class="nav-link active" href="#">Inicio de noticias <span class="sr-only">(current)</span></a>          
+          <%= link_to 'Categorías', categories_path, class:"nav-link" %>
+          <%= link_to 'Tipos de categorías', kinds_path, class:"nav-link" %>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>           
+        </div>
+       </div>
+        
+    </nav>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield  %>
   </body>
 </html>
